--- a/archives/toutiao-search/2023-10-14.md
+++ b/archives/toutiao-search/2023-10-14.md
@@ -1,55 +1,78 @@
 # 2023-10-14
 
-共 135 条
+共 153 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 14 2023 10:11:09 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Oct 14 2023 11:00:38 GMT+0800 (China Standard Time) -->
+1. [患认知障碍老人在美发店消费60万](https://so.toutiao.com/search?keyword=患认知障碍老人在美发店消费60万)
+1. [湖南婚车事故遇难新娘已怀有身孕](https://so.toutiao.com/search?keyword=湖南婚车事故遇难新娘已怀有身孕)
+1. [把青春华章写在祖国大地上](https://so.toutiao.com/search?keyword=把青春华章写在祖国大地上)
+1. [支原体肺炎是否会出现“白肺”](https://so.toutiao.com/search?keyword=支原体肺炎是否会出现“白肺”)
+1. [2024国考时间定了](https://so.toutiao.com/search?keyword=2024国考时间定了)
+1. [以色列地面部队“局部突袭”加沙](https://so.toutiao.com/search?keyword=以色列地面部队“局部突袭”加沙)
+1. [民警遭男子持匕首追刺 开枪致其死亡](https://so.toutiao.com/search?keyword=民警遭男子持匕首追刺+开枪致其死亡)
+1. [人社局人员拍桌子怒斥群众被清退](https://so.toutiao.com/search?keyword=人社局人员拍桌子怒斥群众被清退)
+1. [巴以冲突已造成双方超3200人死亡](https://so.toutiao.com/search?keyword=巴以冲突已造成双方超3200人死亡)
+1. [河南村民晒粮不占主干道形成风景线](https://so.toutiao.com/search?keyword=河南村民晒粮不占主干道形成风景线)
+1. [伊朗称以方封锁加沙是“种族灭绝”](https://so.toutiao.com/search?keyword=伊朗称以方封锁加沙是“种族灭绝”)
+1. [民间流传缠腰龙缠一圈致命是谣言](https://so.toutiao.com/search?keyword=民间流传缠腰龙缠一圈致命是谣言)
+1. [警方通报山东一男子当街鞭打女子](https://so.toutiao.com/search?keyword=警方通报山东一男子当街鞭打女子)
+1. [黎巴嫩真主党就巴以冲突表态](https://so.toutiao.com/search?keyword=黎巴嫩真主党就巴以冲突表态)
+1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
+1. [巴以冲突 为何叙利亚被轰炸](https://so.toutiao.com/search?keyword=巴以冲突+为何叙利亚被轰炸)
+1. [台军：哈马斯的饱和攻击没人能招架](https://so.toutiao.com/search?keyword=台军：哈马斯的饱和攻击没人能招架)
+1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
+1. [孙海洋痛哭称准备上诉](https://so.toutiao.com/search?keyword=孙海洋痛哭称准备上诉)
+1. [巴勒斯坦人在以色列驻日使馆前抗议](https://so.toutiao.com/search?keyword=巴勒斯坦人在以色列驻日使馆前抗议)
+1. [杨氏家族给碧桂园3亿美元无息借款](https://so.toutiao.com/search?keyword=杨氏家族给碧桂园3亿美元无息借款)
+1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
+1. [男子在小区低空飞无人机被当场砸落](https://so.toutiao.com/search?keyword=男子在小区低空飞无人机被当场砸落)
+1. [王毅：中方将派特使赴中东](https://so.toutiao.com/search?keyword=王毅：中方将派特使赴中东)
+1. [辱骂新加坡护士的中国女子认罪道歉](https://so.toutiao.com/search?keyword=辱骂新加坡护士的中国女子认罪道歉)
+1. [拐骗儿童罪五年量刑轻了吗](https://so.toutiao.com/search?keyword=拐骗儿童罪五年量刑轻了吗)
+1. [特朗普“夸奖”黎巴嫩真主党引围攻](https://so.toutiao.com/search?keyword=特朗普“夸奖”黎巴嫩真主党引围攻)
+1. [京东回应刘姓商人被抓谣言](https://so.toutiao.com/search?keyword=京东回应刘姓商人被抓谣言)
+1. [美军里根号航母停靠韩国 朝媒回应](https://so.toutiao.com/search?keyword=美军里根号航母停靠韩国+朝媒回应)
+1. [刘德文送潍坊籍台湾老兵魂归故里](https://so.toutiao.com/search?keyword=刘德文送潍坊籍台湾老兵魂归故里)
+1. [居民举报无人机对着窗口挨家挨户看](https://so.toutiao.com/search?keyword=居民举报无人机对着窗口挨家挨户看)
+1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
+1. [马来西亚女星曾若冰去世](https://so.toutiao.com/search?keyword=马来西亚女星曾若冰去世)
+1. [女子已婚求职被要求拍避孕证据报备](https://so.toutiao.com/search?keyword=女子已婚求职被要求拍避孕证据报备)
+1. [B席：向欧洲杯冠军发起冲击](https://so.toutiao.com/search?keyword=B席：向欧洲杯冠军发起冲击)
+1. [老人逆行致堵塞 交警鞠躬请其退回](https://so.toutiao.com/search?keyword=老人逆行致堵塞+交警鞠躬请其退回)
+1. [伊朗就60亿美元解冻协议喊话美国](https://so.toutiao.com/search?keyword=伊朗就60亿美元解冻协议喊话美国)
+1. [中国前三季度进出口逐季抬升](https://so.toutiao.com/search?keyword=中国前三季度进出口逐季抬升)
+1. [运动会上学生演绎从绿皮火车到高铁](https://so.toutiao.com/search?keyword=运动会上学生演绎从绿皮火车到高铁)
+1. [网购电动车到货是玩偶 京东介入](https://so.toutiao.com/search?keyword=网购电动车到货是玩偶+京东介入)
+1. [知情人士回应杨国强卖私人飞机偿债](https://so.toutiao.com/search?keyword=知情人士回应杨国强卖私人飞机偿债)
+1. [刘嘉玲梁朝伟又恩爱又搞笑](https://so.toutiao.com/search?keyword=刘嘉玲梁朝伟又恩爱又搞笑)
+1. [前8月人民币跨境收付金额34.3万亿](https://so.toutiao.com/search?keyword=前8月人民币跨境收付金额34.3万亿)
+1. [路人视角全红婵街边花式炫乌龟](https://so.toutiao.com/search?keyword=路人视角全红婵街边花式炫乌龟)
+1. [小孩被父亲关在车库出租房3天](https://so.toutiao.com/search?keyword=小孩被父亲关在车库出租房3天)
+1. [校运会开幕学生把马骑来了](https://so.toutiao.com/search?keyword=校运会开幕学生把马骑来了)
+1. [媒体：李思思转型的勇气不该被否定](https://so.toutiao.com/search?keyword=媒体：李思思转型的勇气不该被否定)
+1. [BBC当地记者在加沙报道时哭泣](https://so.toutiao.com/search?keyword=BBC当地记者在加沙报道时哭泣)
+1. [联合国呼吁取消“撤离令” 以回应](https://so.toutiao.com/search?keyword=联合国呼吁取消“撤离令”+以回应)
+1. [体重200斤的外卖小哥偷外卖被抓](https://so.toutiao.com/search?keyword=体重200斤的外卖小哥偷外卖被抓)
 1. [媒体：孙卓案宣判天下无拐仍需努力](https://so.toutiao.com/search?keyword=媒体：孙卓案宣判天下无拐仍需努力)
 1. [为何一夜之间美元停止加息](https://so.toutiao.com/search?keyword=为何一夜之间美元停止加息)
 1. [从“大写意”到“工笔画”](https://so.toutiao.com/search?keyword=从“大写意”到“工笔画”)
-1. [孙海洋痛哭称准备上诉](https://so.toutiao.com/search?keyword=孙海洋痛哭称准备上诉)
 1. [英媒：穆迪对以色列评级发出警告](https://so.toutiao.com/search?keyword=英媒：穆迪对以色列评级发出警告)
 1. [媒体揭中东战争深渊](https://so.toutiao.com/search?keyword=媒体揭中东战争深渊)
-1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
 1. [大妈南京大屠杀纪念馆比耶拍照遭呵斥](https://so.toutiao.com/search?keyword=大妈南京大屠杀纪念馆比耶拍照遭呵斥)
 1. [郑州消防辟谣加油站爆炸](https://so.toutiao.com/search?keyword=郑州消防辟谣加油站爆炸)
-1. [以色列地面部队“局部突袭”加沙](https://so.toutiao.com/search?keyword=以色列地面部队“局部突袭”加沙)
-1. [警方通报山东一男子当街鞭打女子](https://so.toutiao.com/search?keyword=警方通报山东一男子当街鞭打女子)
-1. [巴以冲突 为何叙利亚被轰炸](https://so.toutiao.com/search?keyword=巴以冲突+为何叙利亚被轰炸)
 1. [中东多国加大外交斡旋商讨巴以局势](https://so.toutiao.com/search?keyword=中东多国加大外交斡旋商讨巴以局势)
-1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
-1. [路人视角全红婵街边花式炫乌龟](https://so.toutiao.com/search?keyword=路人视角全红婵街边花式炫乌龟)
 1. [美称不会派遣地面部队参与巴以冲突](https://so.toutiao.com/search?keyword=美称不会派遣地面部队参与巴以冲突)
-1. [杨氏家族给碧桂园3亿美元无息借款](https://so.toutiao.com/search?keyword=杨氏家族给碧桂园3亿美元无息借款)
-1. [男子在小区低空飞无人机被当场砸落](https://so.toutiao.com/search?keyword=男子在小区低空飞无人机被当场砸落)
-1. [黎巴嫩真主党就巴以冲突表态](https://so.toutiao.com/search?keyword=黎巴嫩真主党就巴以冲突表态)
-1. [人社局人员拍桌子怒斥群众被清退](https://so.toutiao.com/search?keyword=人社局人员拍桌子怒斥群众被清退)
 1. [姑姑结婚小侄子搞笑致辞](https://so.toutiao.com/search?keyword=姑姑结婚小侄子搞笑致辞)
-1. [巴以冲突已造成双方超3200人死亡](https://so.toutiao.com/search?keyword=巴以冲突已造成双方超3200人死亡)
-1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
 1. [巴以冲突本周造成至少11名记者死亡](https://so.toutiao.com/search?keyword=巴以冲突本周造成至少11名记者死亡)
 1. [巴勒斯坦父子在加沙空袭中被炸伤](https://so.toutiao.com/search?keyword=巴勒斯坦父子在加沙空袭中被炸伤)
-1. [患认知障碍老人在美发店消费60万](https://so.toutiao.com/search?keyword=患认知障碍老人在美发店消费60万)
-1. [王毅：中方将派特使赴中东](https://so.toutiao.com/search?keyword=王毅：中方将派特使赴中东)
-1. [京东回应刘姓商人被抓谣言](https://so.toutiao.com/search?keyword=京东回应刘姓商人被抓谣言)
-1. [女子已婚求职被要求拍避孕证据报备](https://so.toutiao.com/search?keyword=女子已婚求职被要求拍避孕证据报备)
-1. [马来西亚女星曾若冰去世](https://so.toutiao.com/search?keyword=马来西亚女星曾若冰去世)
 1. [医生向家属打30万借条私了医疗纠纷](https://so.toutiao.com/search?keyword=医生向家属打30万借条私了医疗纠纷)
 1. [中东经济增长或因巴以冲突放缓](https://so.toutiao.com/search?keyword=中东经济增长或因巴以冲突放缓)
-1. [伊朗就60亿美元解冻协议喊话美国](https://so.toutiao.com/search?keyword=伊朗就60亿美元解冻协议喊话美国)
-1. [特朗普“夸奖”黎巴嫩真主党引围攻](https://so.toutiao.com/search?keyword=特朗普“夸奖”黎巴嫩真主党引围攻)
 1. [“科目三舞蹈”在台湾大热](https://so.toutiao.com/search?keyword=“科目三舞蹈”在台湾大热)
-1. [河南村民晒粮不占主干道形成风景线](https://so.toutiao.com/search?keyword=河南村民晒粮不占主干道形成风景线)
 1. [中国特使会见阿拉伯国家驻华使节](https://so.toutiao.com/search?keyword=中国特使会见阿拉伯国家驻华使节)
 1. [C罗：没给自己设定再踢多久的目标](https://so.toutiao.com/search?keyword=C罗：没给自己设定再踢多久的目标)
-1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
-1. [前8月人民币跨境收付金额34.3万亿](https://so.toutiao.com/search?keyword=前8月人民币跨境收付金额34.3万亿)
-1. [拐骗儿童罪五年量刑轻了吗](https://so.toutiao.com/search?keyword=拐骗儿童罪五年量刑轻了吗)
 1. [华为发布迈向F5.5G六大技术升级](https://so.toutiao.com/search?keyword=华为发布迈向F5.5G六大技术升级)
 1. [疯狂小杨哥三只羊控股集团完成更名](https://so.toutiao.com/search?keyword=疯狂小杨哥三只羊控股集团完成更名)
-1. [小孩被父亲关在车库出租房3天](https://so.toutiao.com/search?keyword=小孩被父亲关在车库出租房3天)
-1. [美军里根号航母停靠韩国 朝媒回应](https://so.toutiao.com/search?keyword=美军里根号航母停靠韩国+朝媒回应)
-1. [居民举报无人机对着窗口挨家挨户看](https://so.toutiao.com/search?keyword=居民举报无人机对着窗口挨家挨户看)
 1. [海关总署：进口规模逐季走高](https://so.toutiao.com/search?keyword=海关总署：进口规模逐季走高)
 1. [武大对性骚扰男生处分被指避重就轻](https://so.toutiao.com/search?keyword=武大对性骚扰男生处分被指避重就轻)
 1. [“东伊运”参与对叙空袭？中方回应](https://so.toutiao.com/search?keyword=“东伊运”参与对叙空袭？中方回应)
@@ -65,13 +88,11 @@
 1. [陕北霞姐手术成功母子平安](https://so.toutiao.com/search?keyword=陕北霞姐手术成功母子平安)
 1. [问界新M7平均4-6周交付](https://so.toutiao.com/search?keyword=问界新M7平均4-6周交付)
 1. [90后大学教师与二胡乐手斗琴百场](https://so.toutiao.com/search?keyword=90后大学教师与二胡乐手斗琴百场)
-1. [BBC当地记者在加沙报道时哭泣](https://so.toutiao.com/search?keyword=BBC当地记者在加沙报道时哭泣)
 1. [北京市原崇文区委书记梁志华逝世](https://so.toutiao.com/search?keyword=北京市原崇文区委书记梁志华逝世)
 1. [女子与丈夫相恋13年 越来越好看](https://so.toutiao.com/search?keyword=女子与丈夫相恋13年+越来越好看)
 1. [24岁女子顺转剖大出血多器官衰竭](https://so.toutiao.com/search?keyword=24岁女子顺转剖大出血多器官衰竭)
 1. [中国手提袋风靡非洲成“致富口袋”](https://so.toutiao.com/search?keyword=中国手提袋风靡非洲成“致富口袋”)
 1. [曝美拟打包处理军援以乌和台湾地区](https://so.toutiao.com/search?keyword=曝美拟打包处理军援以乌和台湾地区)
-1. [民警遭男子持匕首追刺 开枪致其死亡](https://so.toutiao.com/search?keyword=民警遭男子持匕首追刺+开枪致其死亡)
 1. [欧盟：以色列撤离令“完全不现实”](https://so.toutiao.com/search?keyword=欧盟：以色列撤离令“完全不现实”)
 1. [C罗在三个10年里都至少打进100球](https://so.toutiao.com/search?keyword=C罗在三个10年里都至少打进100球)
 1. [欧预赛：C罗双响葡萄牙全胜出线](https://so.toutiao.com/search?keyword=欧预赛：C罗双响葡萄牙全胜出线)
@@ -92,7 +113,6 @@
 1. [村干部掌掴13岁女孩致其鼻骨骨折](https://so.toutiao.com/search?keyword=村干部掌掴13岁女孩致其鼻骨骨折)
 1. [涂磊评北极鲶鱼事件](https://so.toutiao.com/search?keyword=涂磊评北极鲶鱼事件)
 1. [女子脱光“小三”衣服游街被判刑](https://so.toutiao.com/search?keyword=女子脱光“小三”衣服游街被判刑)
-1. [媒体：李思思转型的勇气不该被否定](https://so.toutiao.com/search?keyword=媒体：李思思转型的勇气不该被否定)
 1. [杨利伟将前往着陆场迎神十六航天员](https://so.toutiao.com/search?keyword=杨利伟将前往着陆场迎神十六航天员)
 1. [被通缉电诈犯在缅有公职？警方回应](https://so.toutiao.com/search?keyword=被通缉电诈犯在缅有公职？警方回应)
 1. [白宇帆宁理《繁城之下》追剧日历](https://so.toutiao.com/search?keyword=白宇帆宁理《繁城之下》追剧日历)
@@ -123,7 +143,6 @@
 1. [国防部：中国陆军将赴印尼参加演习](https://so.toutiao.com/search?keyword=国防部：中国陆军将赴印尼参加演习)
 1. [台民调：74.4%支持两岸增进交流](https://so.toutiao.com/search?keyword=台民调：74.4%支持两岸增进交流)
 1. [五旬大姐整形失败怒斥机构是无赖](https://so.toutiao.com/search?keyword=五旬大姐整形失败怒斥机构是无赖)
-1. [知情人士回应杨国强卖私人飞机偿债](https://so.toutiao.com/search?keyword=知情人士回应杨国强卖私人飞机偿债)
 1. [南京银行：与恒大合作业务规模较小](https://so.toutiao.com/search?keyword=南京银行：与恒大合作业务规模较小)
 1. [台民调：53.4%认为应下架民进党](https://so.toutiao.com/search?keyword=台民调：53.4%认为应下架民进党)
 1. [男子欠30万不还 法院扣押109双球鞋](https://so.toutiao.com/search?keyword=男子欠30万不还+法院扣押109双球鞋)
@@ -137,6 +156,5 @@
 1. [西安公布落户新政](https://so.toutiao.com/search?keyword=西安公布落户新政)
 1. [巴勒斯坦小伙亲吻母亲和兄弟遗体](https://so.toutiao.com/search?keyword=巴勒斯坦小伙亲吻母亲和兄弟遗体)
 1. [马龙：我想拼尽每一场每一次比赛](https://so.toutiao.com/search?keyword=马龙：我想拼尽每一场每一次比赛)
-1. [运动会上学生演绎从绿皮火车到高铁](https://so.toutiao.com/search?keyword=运动会上学生演绎从绿皮火车到高铁)
 1. [2024款别克微蓝6 430公里版上市](https://so.toutiao.com/search?keyword=2024款别克微蓝6+430公里版上市)
 <!-- END TOUTIAO -->
