--- a/archives/toutiao-search/2023-10-14.md
+++ b/archives/toutiao-search/2023-10-14.md
@@ -1,57 +1,80 @@
 # 2023-10-14
 
-共 153 条
+共 171 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 14 2023 11:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Oct 14 2023 13:00:51 GMT+0800 (China Standard Time) -->
 1. [患认知障碍老人在美发店消费60万](https://so.toutiao.com/search?keyword=患认知障碍老人在美发店消费60万)
-1. [湖南婚车事故遇难新娘已怀有身孕](https://so.toutiao.com/search?keyword=湖南婚车事故遇难新娘已怀有身孕)
+1. [辱骂新加坡护士的中国女子认罪道歉](https://so.toutiao.com/search?keyword=辱骂新加坡护士的中国女子认罪道歉)
 1. [把青春华章写在祖国大地上](https://so.toutiao.com/search?keyword=把青春华章写在祖国大地上)
-1. [支原体肺炎是否会出现“白肺”](https://so.toutiao.com/search?keyword=支原体肺炎是否会出现“白肺”)
-1. [2024国考时间定了](https://so.toutiao.com/search?keyword=2024国考时间定了)
-1. [以色列地面部队“局部突袭”加沙](https://so.toutiao.com/search?keyword=以色列地面部队“局部突袭”加沙)
-1. [民警遭男子持匕首追刺 开枪致其死亡](https://so.toutiao.com/search?keyword=民警遭男子持匕首追刺+开枪致其死亡)
-1. [人社局人员拍桌子怒斥群众被清退](https://so.toutiao.com/search?keyword=人社局人员拍桌子怒斥群众被清退)
+1. [“宁坐宝马哭”女子被曝情变失联](https://so.toutiao.com/search?keyword=“宁坐宝马哭”女子被曝情变失联)
+1. [王毅：中方将派特使赴中东](https://so.toutiao.com/search?keyword=王毅：中方将派特使赴中东)
 1. [巴以冲突已造成双方超3200人死亡](https://so.toutiao.com/search?keyword=巴以冲突已造成双方超3200人死亡)
+1. [支原体肺炎是否会出现“白肺”](https://so.toutiao.com/search?keyword=支原体肺炎是否会出现“白肺”)
+1. [“多尔衮行宫”报价1.8亿挂牌出售](https://so.toutiao.com/search?keyword=“多尔衮行宫”报价1.8亿挂牌出售)
+1. [以色列地面部队“局部突袭”加沙](https://so.toutiao.com/search?keyword=以色列地面部队“局部突袭”加沙)
+1. [村干部掌掴13岁女孩被其父打断鼻骨](https://so.toutiao.com/search?keyword=村干部掌掴13岁女孩被其父打断鼻骨)
+1. [王毅谈巴以冲突症结和出路](https://so.toutiao.com/search?keyword=王毅谈巴以冲突症结和出路)
+1. [民间流传缠腰龙缠一圈致命是谣言](https://so.toutiao.com/search?keyword=民间流传缠腰龙缠一圈致命是谣言)
+1. [台军：哈马斯的饱和攻击没人能招架](https://so.toutiao.com/search?keyword=台军：哈马斯的饱和攻击没人能招架)
+1. [巴以冲突 为何叙利亚被轰炸](https://so.toutiao.com/search?keyword=巴以冲突+为何叙利亚被轰炸)
+1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
+1. [黎巴嫩真主党就巴以冲突表态](https://so.toutiao.com/search?keyword=黎巴嫩真主党就巴以冲突表态)
+1. [孙海洋痛哭称准备上诉](https://so.toutiao.com/search?keyword=孙海洋痛哭称准备上诉)
+1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
+1. [耶路撒冷迎本轮冲突以来首个主麻日](https://so.toutiao.com/search?keyword=耶路撒冷迎本轮冲突以来首个主麻日)
+1. [加拿大总理与巴勒斯坦总统进行交谈](https://so.toutiao.com/search?keyword=加拿大总理与巴勒斯坦总统进行交谈)
+1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
+1. [拐骗儿童罪五年量刑轻了吗](https://so.toutiao.com/search?keyword=拐骗儿童罪五年量刑轻了吗)
+1. [村民：追刺民警被枪击男子是村医](https://so.toutiao.com/search?keyword=村民：追刺民警被枪击男子是村医)
+1. [以军用了白磷弹？现场人员闻到蒜味](https://so.toutiao.com/search?keyword=以军用了白磷弹？现场人员闻到蒜味)
+1. [杨氏家族给碧桂园3亿美元无息借款](https://so.toutiao.com/search?keyword=杨氏家族给碧桂园3亿美元无息借款)
+1. [联合国在加沙地带的物资已经用尽](https://so.toutiao.com/search?keyword=联合国在加沙地带的物资已经用尽)
+1. [居民举报无人机对着窗口挨家挨户看](https://so.toutiao.com/search?keyword=居民举报无人机对着窗口挨家挨户看)
+1. [多方呼吁拐骗和拐卖同罪同刑](https://so.toutiao.com/search?keyword=多方呼吁拐骗和拐卖同罪同刑)
+1. [华为发布迈向F5.5G六大技术升级](https://so.toutiao.com/search?keyword=华为发布迈向F5.5G六大技术升级)
+1. [24岁女子顺转剖大出血多器官衰竭](https://so.toutiao.com/search?keyword=24岁女子顺转剖大出血多器官衰竭)
+1. [专家解析孙卓被拐案为何判5年](https://so.toutiao.com/search?keyword=专家解析孙卓被拐案为何判5年)
+1. [知情人士回应杨国强卖私人飞机偿债](https://so.toutiao.com/search?keyword=知情人士回应杨国强卖私人飞机偿债)
+1. [机构：A股市场底部特征明显](https://so.toutiao.com/search?keyword=机构：A股市场底部特征明显)
+1. [美国会报告鼓吹准备同时与中俄开战](https://so.toutiao.com/search?keyword=美国会报告鼓吹准备同时与中俄开战)
+1. [京东回应刘姓商人被抓谣言](https://so.toutiao.com/search?keyword=京东回应刘姓商人被抓谣言)
+1. [民警遭男子持匕首追刺 开枪致其死亡](https://so.toutiao.com/search?keyword=民警遭男子持匕首追刺+开枪致其死亡)
+1. [邱毅：朱立伦和赵少康谁的招更高超](https://so.toutiao.com/search?keyword=邱毅：朱立伦和赵少康谁的招更高超)
+1. [美国防长在以色列的言论引网友吐槽](https://so.toutiao.com/search?keyword=美国防长在以色列的言论引网友吐槽)
+1. [律师：手机直播演唱会存在侵权风险](https://so.toutiao.com/search?keyword=律师：手机直播演唱会存在侵权风险)
+1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
+1. [媒体：李思思转型的勇气不该被否定](https://so.toutiao.com/search?keyword=媒体：李思思转型的勇气不该被否定)
+1. [老人逆行致堵塞 交警鞠躬请其退回](https://so.toutiao.com/search?keyword=老人逆行致堵塞+交警鞠躬请其退回)
+1. [马来西亚女星曾若冰去世](https://so.toutiao.com/search?keyword=马来西亚女星曾若冰去世)
+1. [BBC当地记者在加沙报道时哭泣](https://so.toutiao.com/search?keyword=BBC当地记者在加沙报道时哭泣)
+1. [北方将受冷空气影响局地降温达10℃](https://so.toutiao.com/search?keyword=北方将受冷空气影响局地降温达10℃)
+1. [女生火车上假装神经病劝阻乘客外放](https://so.toutiao.com/search?keyword=女生火车上假装神经病劝阻乘客外放)
+1. [博主揭贵州车站一柜台金镶玉骗局](https://so.toutiao.com/search?keyword=博主揭贵州车站一柜台金镶玉骗局)
+1. [女子已婚求职被要求拍避孕证据报备](https://so.toutiao.com/search?keyword=女子已婚求职被要求拍避孕证据报备)
+1. [哈登：想在76人退役但球队无此打算](https://so.toutiao.com/search?keyword=哈登：想在76人退役但球队无此打算)
+1. [普京谈巴以冲突时提及列宁格勒战役](https://so.toutiao.com/search?keyword=普京谈巴以冲突时提及列宁格勒战役)
+1. [湖南婚车事故遇难新娘已怀有身孕](https://so.toutiao.com/search?keyword=湖南婚车事故遇难新娘已怀有身孕)
+1. [2024国考时间定了](https://so.toutiao.com/search?keyword=2024国考时间定了)
+1. [人社局人员拍桌子怒斥群众被清退](https://so.toutiao.com/search?keyword=人社局人员拍桌子怒斥群众被清退)
 1. [河南村民晒粮不占主干道形成风景线](https://so.toutiao.com/search?keyword=河南村民晒粮不占主干道形成风景线)
 1. [伊朗称以方封锁加沙是“种族灭绝”](https://so.toutiao.com/search?keyword=伊朗称以方封锁加沙是“种族灭绝”)
-1. [民间流传缠腰龙缠一圈致命是谣言](https://so.toutiao.com/search?keyword=民间流传缠腰龙缠一圈致命是谣言)
 1. [警方通报山东一男子当街鞭打女子](https://so.toutiao.com/search?keyword=警方通报山东一男子当街鞭打女子)
-1. [黎巴嫩真主党就巴以冲突表态](https://so.toutiao.com/search?keyword=黎巴嫩真主党就巴以冲突表态)
-1. [孙悦发视频谈人贩子被判5年](https://so.toutiao.com/search?keyword=孙悦发视频谈人贩子被判5年)
-1. [巴以冲突 为何叙利亚被轰炸](https://so.toutiao.com/search?keyword=巴以冲突+为何叙利亚被轰炸)
-1. [台军：哈马斯的饱和攻击没人能招架](https://so.toutiao.com/search?keyword=台军：哈马斯的饱和攻击没人能招架)
-1. [普京：以地面进攻加沙将有严重后果](https://so.toutiao.com/search?keyword=普京：以地面进攻加沙将有严重后果)
-1. [孙海洋痛哭称准备上诉](https://so.toutiao.com/search?keyword=孙海洋痛哭称准备上诉)
 1. [巴勒斯坦人在以色列驻日使馆前抗议](https://so.toutiao.com/search?keyword=巴勒斯坦人在以色列驻日使馆前抗议)
-1. [杨氏家族给碧桂园3亿美元无息借款](https://so.toutiao.com/search?keyword=杨氏家族给碧桂园3亿美元无息借款)
-1. [胡歌饰演张桂梅丈夫惹争议](https://so.toutiao.com/search?keyword=胡歌饰演张桂梅丈夫惹争议)
 1. [男子在小区低空飞无人机被当场砸落](https://so.toutiao.com/search?keyword=男子在小区低空飞无人机被当场砸落)
-1. [王毅：中方将派特使赴中东](https://so.toutiao.com/search?keyword=王毅：中方将派特使赴中东)
-1. [辱骂新加坡护士的中国女子认罪道歉](https://so.toutiao.com/search?keyword=辱骂新加坡护士的中国女子认罪道歉)
-1. [拐骗儿童罪五年量刑轻了吗](https://so.toutiao.com/search?keyword=拐骗儿童罪五年量刑轻了吗)
 1. [特朗普“夸奖”黎巴嫩真主党引围攻](https://so.toutiao.com/search?keyword=特朗普“夸奖”黎巴嫩真主党引围攻)
-1. [京东回应刘姓商人被抓谣言](https://so.toutiao.com/search?keyword=京东回应刘姓商人被抓谣言)
 1. [美军里根号航母停靠韩国 朝媒回应](https://so.toutiao.com/search?keyword=美军里根号航母停靠韩国+朝媒回应)
 1. [刘德文送潍坊籍台湾老兵魂归故里](https://so.toutiao.com/search?keyword=刘德文送潍坊籍台湾老兵魂归故里)
-1. [居民举报无人机对着窗口挨家挨户看](https://so.toutiao.com/search?keyword=居民举报无人机对着窗口挨家挨户看)
-1. [2024年起华为或将停止采购高通芯片](https://so.toutiao.com/search?keyword=2024年起华为或将停止采购高通芯片)
-1. [马来西亚女星曾若冰去世](https://so.toutiao.com/search?keyword=马来西亚女星曾若冰去世)
-1. [女子已婚求职被要求拍避孕证据报备](https://so.toutiao.com/search?keyword=女子已婚求职被要求拍避孕证据报备)
 1. [B席：向欧洲杯冠军发起冲击](https://so.toutiao.com/search?keyword=B席：向欧洲杯冠军发起冲击)
-1. [老人逆行致堵塞 交警鞠躬请其退回](https://so.toutiao.com/search?keyword=老人逆行致堵塞+交警鞠躬请其退回)
 1. [伊朗就60亿美元解冻协议喊话美国](https://so.toutiao.com/search?keyword=伊朗就60亿美元解冻协议喊话美国)
 1. [中国前三季度进出口逐季抬升](https://so.toutiao.com/search?keyword=中国前三季度进出口逐季抬升)
 1. [运动会上学生演绎从绿皮火车到高铁](https://so.toutiao.com/search?keyword=运动会上学生演绎从绿皮火车到高铁)
 1. [网购电动车到货是玩偶 京东介入](https://so.toutiao.com/search?keyword=网购电动车到货是玩偶+京东介入)
-1. [知情人士回应杨国强卖私人飞机偿债](https://so.toutiao.com/search?keyword=知情人士回应杨国强卖私人飞机偿债)
 1. [刘嘉玲梁朝伟又恩爱又搞笑](https://so.toutiao.com/search?keyword=刘嘉玲梁朝伟又恩爱又搞笑)
 1. [前8月人民币跨境收付金额34.3万亿](https://so.toutiao.com/search?keyword=前8月人民币跨境收付金额34.3万亿)
 1. [路人视角全红婵街边花式炫乌龟](https://so.toutiao.com/search?keyword=路人视角全红婵街边花式炫乌龟)
 1. [小孩被父亲关在车库出租房3天](https://so.toutiao.com/search?keyword=小孩被父亲关在车库出租房3天)
 1. [校运会开幕学生把马骑来了](https://so.toutiao.com/search?keyword=校运会开幕学生把马骑来了)
-1. [媒体：李思思转型的勇气不该被否定](https://so.toutiao.com/search?keyword=媒体：李思思转型的勇气不该被否定)
-1. [BBC当地记者在加沙报道时哭泣](https://so.toutiao.com/search?keyword=BBC当地记者在加沙报道时哭泣)
 1. [联合国呼吁取消“撤离令” 以回应](https://so.toutiao.com/search?keyword=联合国呼吁取消“撤离令”+以回应)
 1. [体重200斤的外卖小哥偷外卖被抓](https://so.toutiao.com/search?keyword=体重200斤的外卖小哥偷外卖被抓)
 1. [媒体：孙卓案宣判天下无拐仍需努力](https://so.toutiao.com/search?keyword=媒体：孙卓案宣判天下无拐仍需努力)
@@ -71,7 +94,6 @@
 1. [“科目三舞蹈”在台湾大热](https://so.toutiao.com/search?keyword=“科目三舞蹈”在台湾大热)
 1. [中国特使会见阿拉伯国家驻华使节](https://so.toutiao.com/search?keyword=中国特使会见阿拉伯国家驻华使节)
 1. [C罗：没给自己设定再踢多久的目标](https://so.toutiao.com/search?keyword=C罗：没给自己设定再踢多久的目标)
-1. [华为发布迈向F5.5G六大技术升级](https://so.toutiao.com/search?keyword=华为发布迈向F5.5G六大技术升级)
 1. [疯狂小杨哥三只羊控股集团完成更名](https://so.toutiao.com/search?keyword=疯狂小杨哥三只羊控股集团完成更名)
 1. [海关总署：进口规模逐季走高](https://so.toutiao.com/search?keyword=海关总署：进口规模逐季走高)
 1. [武大对性骚扰男生处分被指避重就轻](https://so.toutiao.com/search?keyword=武大对性骚扰男生处分被指避重就轻)
@@ -90,7 +112,6 @@
 1. [90后大学教师与二胡乐手斗琴百场](https://so.toutiao.com/search?keyword=90后大学教师与二胡乐手斗琴百场)
 1. [北京市原崇文区委书记梁志华逝世](https://so.toutiao.com/search?keyword=北京市原崇文区委书记梁志华逝世)
 1. [女子与丈夫相恋13年 越来越好看](https://so.toutiao.com/search?keyword=女子与丈夫相恋13年+越来越好看)
-1. [24岁女子顺转剖大出血多器官衰竭](https://so.toutiao.com/search?keyword=24岁女子顺转剖大出血多器官衰竭)
 1. [中国手提袋风靡非洲成“致富口袋”](https://so.toutiao.com/search?keyword=中国手提袋风靡非洲成“致富口袋”)
 1. [曝美拟打包处理军援以乌和台湾地区](https://so.toutiao.com/search?keyword=曝美拟打包处理军援以乌和台湾地区)
 1. [欧盟：以色列撤离令“完全不现实”](https://so.toutiao.com/search?keyword=欧盟：以色列撤离令“完全不现实”)
@@ -123,15 +144,12 @@
 1. [哈马斯向以色列发射数百枚火箭弹](https://so.toutiao.com/search?keyword=哈马斯向以色列发射数百枚火箭弹)
 1. [专家呼吁降低或取消货车司机保证金](https://so.toutiao.com/search?keyword=专家呼吁降低或取消货车司机保证金)
 1. [检察机关对张晓霈涉嫌受贿一案公诉](https://so.toutiao.com/search?keyword=检察机关对张晓霈涉嫌受贿一案公诉)
-1. [邱毅：朱立伦和赵少康谁的招更高超](https://so.toutiao.com/search?keyword=邱毅：朱立伦和赵少康谁的招更高超)
 1. [15年前的国产手机系统是什么样的](https://so.toutiao.com/search?keyword=15年前的国产手机系统是什么样的)
 1. [英国将派遣舰艇军机“支持以色列”](https://so.toutiao.com/search?keyword=英国将派遣舰艇军机“支持以色列”)
-1. [美国会报告鼓吹准备同时与中俄开战](https://so.toutiao.com/search?keyword=美国会报告鼓吹准备同时与中俄开战)
 1. [4厅官与1名国企原董事长被决定逮捕](https://so.toutiao.com/search?keyword=4厅官与1名国企原董事长被决定逮捕)
 1. [9月金融数据出炉：M2同比增长10.3%](https://so.toutiao.com/search?keyword=9月金融数据出炉：M2同比增长10.3%)
 1. [9月人民币贷款增加2.31万亿元](https://so.toutiao.com/search?keyword=9月人民币贷款增加2.31万亿元)
 1. [前3季度人民币存款增加22.48万亿元](https://so.toutiao.com/search?keyword=前3季度人民币存款增加22.48万亿元)
-1. [“宁坐宝马哭”女子被曝情变失联](https://so.toutiao.com/search?keyword=“宁坐宝马哭”女子被曝情变失联)
 1. [黎巴嫩将提交针对以色列的紧急抗议](https://so.toutiao.com/search?keyword=黎巴嫩将提交针对以色列的紧急抗议)
 1. [民众党坚持比民调 赵少康回应](https://so.toutiao.com/search?keyword=民众党坚持比民调+赵少康回应)
 1. [媒体评学校要求学生不带书包回家](https://so.toutiao.com/search?keyword=媒体评学校要求学生不带书包回家)
